force-app/main/default/objects/Listings__c/Listings__c.object-meta.xml
<CustomObject>
    <description>A &quot;Listing&quot; is a data object representing a property available for sale or rent in the real estate industry. It typically includes property details (type, location, size), pricing information, contact details, and a unique identifier for tracking. Listings are fundamental for property search and real estate transactions.</description>
    <label>Listing</label>
    <nameField>
        <label>Listings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>