force-app/main/default/objects/Listings__c/fields/Cooling__c.field-meta.xml
<CustomField>
    <fullName>Cooling__c</fullName>
    <label>Cooling</label>
    <length>150</length>
    <type>Text</type>
</CustomField>