force-app/main/default/objects/Listings__c/fields/Flooring__c.field-meta.xml
<CustomField>
    <fullName>Flooring__c</fullName>
    <label>Flooring</label>
    <length>150</length>
    <type>Text</type>
</CustomField>