force-app/main/default/objects/Listings__c/fields/Garade_parking_no__c.field-meta.xml
<CustomField>
    <fullName>Garade_parking_no__c</fullName>
    <label>Garade parking number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>