force-app/main/default/objects/Listings__c/fields/Heating__c.field-meta.xml
<CustomField>
    <fullName>Heating__c</fullName>
    <label>Heating</label>
    <length>150</length>
    <type>Text</type>
</CustomField>