force-app/main/default/objects/Listings__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <label>Lot</label>
    <length>254</length>
    <type>Text</type>
</CustomField>