force-app/main/default/objects/Listings__c/fields/No_of_Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bathrooms__c</fullName>
    <label>No.of Bathrooms</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>