force-app/main/default/objects/Listings__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Property (Listing Owner)</inlineHelpText>
    <label>Seller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>