force-app/main/default/objects/Listings__c/fields/Square_footage__c.field-meta.xml
<CustomField>
    <fullName>Square_footage__c</fullName>
    <label>Square footage</label>
    <length>254</length>
    <type>Text</type>
</CustomField>