force-app/main/default/objects/Listings__c/fields/Type_of_unit__c.field-meta.xml
<CustomField>
    <fullName>Type_of_unit__c</fullName>
    <label>Type of unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Residence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>