force-app/main/default/objects/Listings__c/fields/Unit_number__c.field-meta.xml
<CustomField>
    <fullName>Unit_number__c</fullName>
    <label>Unit number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>