force-app/main/default/objects/Listings__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary Agent</inlineHelpText>
    <label>Property Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>