force-app/main/default/objects/Listings__c/fields/Virtual_tour_link__c.field-meta.xml
<CustomField>
    <fullName>Virtual_tour_link__c</fullName>
    <label>Virtual tour link</label>
    <type>Url</type>
</CustomField>