force-app/main/default/objects/Listings__c/fields/Year_built__c.field-meta.xml
<CustomField>
    <fullName>Year_built__c</fullName>
    <label>Year built</label>
    <length>254</length>
    <type>Text</type>
</CustomField>