force-app/main/default/objects/Listings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Property__c</columns>
    <columns>Listing_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>